cds/DeterministicDump.java failed: File content different

XMLWordPrintable

    • b24
    • x86_64
    • windows

      The following test failed in the JDK15 CI:

      runtime/cds/DeterministicDump.java

      Here's a snippet from the log file:

      ----------System.err:(13/818)----------
      java.lang.RuntimeException: File content different at byte #4, b0 = -52, b1 = 32
      at DeterministicDump.compare(DeterministicDump.java:93)
      at DeterministicDump.main(DeterministicDump.java:67)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:298)
      at java.base/java.lang.Thread.run(Thread.java:832)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down test

      result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: File content different at byte #4, b0 = -52, b1 = 32

        There are no Sub-Tasks for this issue.

            Assignee:
            Ioi Lam
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: