8244536: cds/DeterministicDump.java failed: File content different

Reviewed-by: ccheung, stuefe